--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "MIT",
   "dependencies": {
     "chromedriver": "^2.45.0",
+    "express": "^4.16.4",
+    "request-promise": "^4.2.2",
     "selenium-webdriver": "^4.0.0-alpha.1"
   },
   "devDependencies": {
