--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Leandro Gaspar Scanavini",
   "license": "MIT",
   "dependencies": {
+    "awilix": "^4.1.0",
     "chromedriver": "^2.45.0",
     "express": "^4.16.4",
     "request-promise": "^4.2.2",
