Created worker server

--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/temp.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start-worker": "ts-node src/worker-server",
+    "start-main": "ts-node src/main-server",
+    "start": "ts-node src/temp.js",
+    "test": "mocha -r ts-node/register src/**/spec.ts"
   },
   "author": "Leandro Gaspar Scanavini",
   "license": "MIT",
@@ -14,12 +16,21 @@
     "awilix": "^4.1.0",
     "chromedriver": "^2.45.0",
     "express": "^4.16.4",
+    "koa": "^2.6.2",
+    "koa-router": "^7.4.0",
     "request-promise": "^4.2.2",
     "selenium-webdriver": "^4.0.0-alpha.1",
     "ws": "^6.1.2"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.7",
+    "@types/koa": "^2.0.48",
+    "@types/koa-router": "^7.0.37",
+    "@types/mocha": "^5.2.5",
     "@types/node": "^10.12.18",
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
+    "ts-node": "^7.0.1",
     "typescript": "^3.2.2"
   }
 }
