--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "build": "tsc",
     "start-worker": "ts-node src/worker-server",
     "start-main": "ts-node src/main-server",
-    "start": "ts-node src/temp.js",
-    "test": "mocha -r ts-node/register src/**/spec.ts"
+    "example-ws": "node examples/ws-server.js",
+    "example-rest": "node examples/rest-server.js",
+    "example": "npm-run-all --parallel start-worker example-ws example-rest",
+    "test": "mocha -r ts-node/register src/**/*spec.ts"
   },
   "author": "Leandro Gaspar Scanavini",
   "license": "MIT",
@@ -30,6 +32,7 @@
     "@types/node": "^10.12.18",
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
+    "npm-run-all": "^4.1.5",
     "ts-node": "^7.0.1",
     "typescript": "^3.2.2"
   }
