--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "koa": "^2.6.2",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.2",
+    "socket.io": "^2.2.0",
     "test-flow-examples": "0.0.3"
   },
   "devDependencies": {
