--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "koa-router": "^7.4.0",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
-    "test-flow-examples": "0.0.4"
+    "test-flow-examples": "0.0.4",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
