--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "example-rest": "node node_modules/test-flow-examples/lib/servers/rest.js",
     "example": "npm-run-all --parallel start-main start-worker example-ws example-rest",
     "lint": "eslint src",
-    "test": "mocha"
+    "test": "mocha --watch src test",
+    "test-travis": "nyc --reporter=html --reporter=text mocha",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "author": "Leandro Gaspar Scanavini",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/leandrogaspar/test-flow"
+  },
   "dependencies": {
     "awilix": "^4.1.0",
     "koa": "^2.6.2",
@@ -26,10 +32,12 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "coveralls": "^3.0.2",
     "eslint": "^5.12.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
     "mocha": "^5.2.0",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "nyc": "^13.2.0"
   }
 }
